--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 ---
-theme: jekyll-theme-cayman
+layout: default
 ---
 
-<!DOCTYPE html>
-<html>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p>This is Tilly Softly's page. </p>
 </body>
-</html>
+
